--- a/packages/SystemUI/res/values/superior_strings.xml
+++ b/packages/SystemUI/res/values/superior_strings.xml
@@ -140,4 +140,9 @@
 
     <!-- Adaptive charging -->
     <string name="adaptive_charging_time_estimate">%1$s • Adaptive charging (full by %2$s)</string>
+
+    <!-- Force stop -->
+    <string name="task_helper_app_killed">%1$s force stopped</string>
+    <string name="empty_app_killed">App</string>
+
 </resources>
