--- a/packages/SystemUI/res/values/superior_strings.xml
+++ b/packages/SystemUI/res/values/superior_strings.xml
@@ -138,4 +138,6 @@
     </string>
     <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Hz</string>
 
+    <!-- Adaptive charging -->
+    <string name="adaptive_charging_time_estimate">%1$s • Adaptive charging (full by %2$s)</string>
 </resources>
